--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     ports:
       - "9090:9090"
     networks: [ak4net]
-    restart: unless-stopped
+    restart: no
 
   node-exporter:
     image: prom/node-exporter:latest
@@ -74,7 +74,7 @@ services:
     ports:
       - "9100:9100"
     networks: [ak4net]
-    restart: unless-stopped
+    restart: no
     privileged: true
 
   cadvisor:
@@ -92,7 +92,7 @@ services:
     ports:
       - "8081:8080"
     networks: [ak4net]
-    restart: unless-stopped
+    restart: no
     depends_on:
       - db
       - web
@@ -115,7 +115,7 @@ services:
     networks: [ak4net]
     depends_on:
       - prometheus
-    restart: unless-stopped
+    restart: no
 
 volumes:
   db_data:
